# py_prime_number_checker

./: .gitignore  Cargo.toml  LICENSE  README.md  contributing.md  py_prime.py  test_py_prime.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
src/: lib.rs  math.rs
